--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <center>
-        <h1>Farebné štvorčeky</h1>
+        <h1>Povrch marsu</h1>
 
-    <canvas id="canvas" width="900" height="110"></canvas>
+    <canvas id="canvas" width="900" height="300"></canvas>
     <script src="{{ url_for('static', filename='grafika.js') }}" type="text/javascript"></script>
     <h2>chat</h2>
     <input type="text" id="myName">
